<resources>
  <!--app-->
  <string name="app_name">TripCost</string>

  <!--navigation drawer-->
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_trips">Trips</string>
  <string name="nav_friends">Friends</string>

  <!--menu-->
  <string name="action_settings">Settings</string>
  <string name="action_edit_trip">Edit Trip</string>
  <string name="action_add_transaction">Add Transaction</string>
  <string name="action_view_transactions">View Transactions</string>

  <!--FriendPickerFragment-->
  <string name="pick_friend_dialog_title">Select Participants</string>
  <string name="pick_friend_dialog_positive_button">OK</string>
  <string name="pick_friend_dialog_negative_button">Cancel</string>

  <!--fragment titles-->
  <string name="title_fragment_trips">Trips</string>
  <string name="title_fragment_friends">Friends</string>

  <!--compose (new/edit) FriendActivity-->
  <string name="title_activity_new_friend">New Friend</string>
  <string name="title_activity_edit_friend">Edit Friend</string>
  <string name="compose_friend_name">Name</string>
  <string name="save_friend_btn">Save</string>
  <string name="cancel_friend_btn">Cancel</string>
  <string name="compose_friend_image">Friend Image</string>
  <string name="friend_created_toast">Friend successfully saved</string>
  <string name="error_friend_name_toast">You must provide a name for the friend</string>
  <string name="error_saving_friend_toast">Something went wrong. We could not save the friend</string>

  <!--ViewFriendActivity-->
  <string name="title_activity_view_friend">Friend Detail</string>
  <string name="view_friend_name">Name</string>
  <string name="view_friend_image">Friend Image</string>

  <!--compose (new/edit) TripActivity-->
  <string name="title_activity_new_trip">New Trip</string>
  <string name="compose_trip_name">Name</string>
  <string name="compose_trip_description">Description</string>
  <string name="compose_trip_participants">Participants</string>
  <string name="compose_trip_participants_count">(%d) selected</string>
  <string name="compose_trip_start_date">Start</string>
  <string name="compose_trip_end_date">End</string>
  <string name="save_trip_btn">Save</string>
  <string name="cancel_trip_btn">Cancel</string>
  <string name="trip_created_toast">Trip successfully saved</string>
  <string name="error_trip_name_toast">You must provide a name for the trip</string>
  <string name="error_trip_date_toast">You must provide start and end dates</string>
  <string name="error_trip_participants_toast">You must select at least one participant</string>
  <string name="error_saving_trip_toast">Something went wrong. We could not save the trip</string>
  <string name="error_saving_friend_trip_toast">Something went wrong. We could not save the participant</string>

  <!--ViewTripActivity-->
  <string name="title_activity_view_trip">Trip Detail</string>
  <string name="view_trip_name">Name</string>
  <string name="view_trip_description">Description</string>
  <string name="view_trip_participants">Participants</string>
  <string name="view_trip_start_date">Start</string>
  <string name="view_trip_end_date">End</string>

  <!--NewTransactionActivity-->
  <string name="title_activity_new_transaction">New Transaction</string>
  <string name="new_transaction_name">Name</string>
  <string name="new_transaction_description">Description</string>
  <string name="new_transaction_when">When</string>
  <string name="save_transaction_btn">Save</string>
  <string name="cancel_transaction_btn">Cancel</string>

  <!--TransactionFriendPickerFragment-->
  <string name="pick_transaction_friend_dialog_title">Select Participant</string>
  <string name="pick_transaction_friend_dialog_positive_button">OK</string>
  <string name="pick_transaction_friend_dialog_negative_button">Cancel</string>
  <string name="pick_transaction_friend_dialog_friend_spinner">Friend</string>
  <string name="pick_transaction_friend_dialog_amount">Amount</string>
</resources>
