<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cl.flores.nicolas.tripcost.activities.ViewTripActivity"
    tools:showIn="@layout/activity_view_trip">

  <TextView
      android:id="@+id/view_trip_name_title_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:text="@string/compose_trip_name"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

  <TextView
      android:id="@+id/view_trip_name_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentTop="true"
      android:layout_toEndOf="@+id/view_trip_description_title_tv"/>

  <TextView
      android:id="@+id/view_trip_description_title_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/view_trip_name_title_tv"
      android:layout_marginTop="@dimen/text_margin"
      android:text="@string/compose_trip_description"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

  <TextView
      android:id="@+id/view_trip_description_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/view_trip_description_title_tv"
      android:layout_marginTop="@dimen/text_margin"/>

  <TextView
      android:id="@+id/view_trip_start_date_title_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/view_trip_description_tv"
      android:layout_marginTop="@dimen/text_margin"
      android:text="@string/compose_trip_start_date"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

  <TextView
      android:id="@+id/view_trip_end_date_title_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_below="@+id/view_trip_description_tv"
      android:layout_marginTop="@dimen/text_margin"
      android:text="@string/compose_trip_end_date"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/view_trip_start_date_title_tv"
      android:layout_marginTop="@dimen/text_margin"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/view_trip_start_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:ems="10"/>

    <TextView
        android:id="@+id/view_trip_end_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:ems="10"
        android:gravity="end"/>
  </LinearLayout>

  <TextView
      android:id="@+id/view_trip_participants_title_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/linearLayout"
      android:layout_marginTop="@dimen/text_margin"
      android:text="@string/compose_trip_participants"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

  <android.support.v7.widget.RecyclerView
      android:id="@+id/view_trip_participants_rv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/view_trip_participants_title_tv"
      tools:listitem="@layout/fragment_friend"/>
</RelativeLayout>
