<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.flores.nicolas.tripcost.activities.NewTransactionActivity">

  <TextView
      android:id="@+id/new_transaction_name_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:labelFor="@+id/new_transaction_name_et"
      android:text="@string/new_transaction_name"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

  <EditText
      android:id="@+id/new_transaction_name_et"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/new_transaction_name_tv"
      android:layout_marginTop="@dimen/text_margin"
      android:ems="10"
      android:hint="@string/new_transaction_name"
      android:inputType="text|textCapWords|textAutoComplete|textPersonName|textAutoCorrect"/>

  <TextView
      android:id="@+id/new_transaction_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/new_transaction_name_et"
      android:layout_marginTop="@dimen/text_margin"
      android:labelFor="@+id/new_transaction_description_et"
      android:text="@string/new_transaction_description"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

  <EditText
      android:id="@+id/new_transaction_description_et"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/new_transaction_description"
      android:layout_marginTop="@dimen/text_margin"
      android:ems="10"
      android:hint="@string/new_transaction_description"
      android:inputType="textMultiLine|textAutoComplete|textAutoCorrect"
      android:maxLines="3"
      android:textIsSelectable="true"/>

  <TextView
      android:id="@+id/new_transaction_when_title_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/new_transaction_description_et"
      android:layout_marginTop="@dimen/text_margin"
      android:labelFor="@+id/new_transaction_when_et"
      android:text="@string/new_transaction_when"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

  <EditText
      android:id="@+id/new_transaction_when_et"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_below="@+id/new_transaction_description_et"
      android:ems="10"
      android:focusable="false"
      android:inputType="date"/>

  <ImageButton
      android:id="@+id/save_transaction_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentEnd="true"
      android:background="@drawable/primary_rounded_btn"
      android:clickable="true"
      android:contentDescription="@string/save_transaction_btn"
      android:foregroundGravity="center_vertical|center_horizontal"
      android:padding="@dimen/text_margin"
      android:src="@drawable/ic_done"/>

  <ImageButton
      android:id="@+id/cancel_transaction_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentStart="true"
      android:background="@drawable/secondary_rounded_btn"
      android:clickable="true"
      android:contentDescription="@string/cancel_transaction_btn"
      android:foregroundGravity="center_vertical|center_horizontal"
      android:padding="@dimen/text_margin"
      android:src="@drawable/ic_clear"/>

</RelativeLayout>
